--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ owner:
   facebook: mina.kim.vitamina
   google:
     plus: #username
-    analytics: UA-62251910-2
+    analytics: 
     verify:
     ad-client:
     ad-slot:
