upgrade resume and add 2 new posts

--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,11 @@
+- name: TutTotTud
+  descr: "Grand Theatre; Groningen, Netherlands, 12-13.Nov.2018"
+  website: https://www.tuttottud.com/
+
+- name: Terzetto
+  descr: "SIGN; Groningen, Netherlands, 03-25.Nov.2018"
+  website: https://sign2.nl/
+
 - name: Shaky Grounds Festival
   descr: "Academie Minerva; Groningen, Netherlands, 08-10.Jun.2018"
   website:
