--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub/Jekyll, MaxMSP, Processing, OpenFrameworks, Raspberry Pi, Arduino, HTML/CSS
-percentage: 70, 60, 50, 30, 30, 80, 70
+aspects: GitHub/Jekyll, MaxMSP, Processing(P5.js), OpenFrameworks, Raspberry Pi, Arduino, HTML/CSS
+percentage: 70, 60, 60, 30, 30, 80, 70
