add forkingroom exhibition

--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -6,6 +6,10 @@
   descr: "SIGN; Groningen, Netherlands, 03-25.Nov.2018"
   website: https://sign2.nl/
 
+- name: Forking Room - Your Smart Neighborhood
+  descr: "PostTerritoryUjeongguk; Seoul, South Korea, 01-04.Nov.2018"
+  website: http://ujeongguk.com/forking-room/
+
 - name: Shaky Grounds Festival
   descr: "Academie Minerva; Groningen, Netherlands, 08-10.Jun.2018"
   website:
