--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: Instruments Make Play Fair
+  descr: "WORM; Rotterdam, Netherlands, 08.Dec.2018"
+  website: https://instrumentsmakeplay.nl/8-december-2018-instruments-make-play-fair-in-worm-rotterdam/
+
 - name: TutTotTud
   descr: "Grand Theatre; Groningen, Netherlands, 12-13.Nov.2018"
   website: https://www.tuttottud.com/
