--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: The Train that Sailed (Winter Wel Vaart 2018)
+  descr: "Theaterskip Bald'r; Groningen, Netherlands, 21.Dec.2018"
+  website: https://www.winterwelvaart.nl/
+
 - name: Instruments Make Play Fair
   descr: "WORM; Rotterdam, Netherlands, 08.Dec.2018"
   website: https://instrumentsmakeplay.nl/8-december-2018-instruments-make-play-fair-in-worm-rotterdam/
