--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -28,7 +28,7 @@
 
 - name: Het Rumoer(Sound festival)
   descr: "WolkenFabriek; Groningen, Netherlands, 31.Mar.-1.Apr.2018"
-  website:
+  website: https://www.facebook.com/hetrumoer/
 
 - name: OrbitFest
   descr: "Synagoge Groningen; Groningen, Netherlands, 15-17.Dec.2017"
