--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: Stukafest
+  descr: "Groningen, Netherlands, 28.Feb.2019"
+  website: https://www.stukafest.nl/en/groningen/
+
 - name: The Train that Sailed (Winter Wel Vaart 2018)
   descr: "Theaterskip Bald'r; Groningen, Netherlands, 21.Dec.2018"
   website: https://www.winterwelvaart.nl/
