--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: (Un)formed, Graduation show Academie Minerva
+  descr: "Suikerfabriek, Groningen, Netherlands, 22-27.Jun.2019"
+  website: 
+
 - name: Stukafest
   descr: "Groningen, Netherlands, 28.Feb.2019"
   website: https://www.stukafest.nl/en/groningen/
