--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub/Jekyll, MaxMSP, Processing(P5.js), Arduino, HTML/CSS
-percentage: 70, 75, 60, 70, 80
+aspects: GitHub/Jekyll, MaxMSP, Processing(P5.js), Arduino, HTML/CSS, Web Design
+percentage: 70, 75, 60, 70, 80, 60
