--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: WeSA 2019
+  descr: "Platform-L, Seoul, South Korea, 27-28.Sep.2019"
+  website: https://www.wesa.kr/
+
 - name: Gogbot festival 2019
   descr: "Enschede, Netherlands, 5-8.Sep.2019"
   website: https://2019.gogbot.nl/
