--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: Technologie-kunstexpo, ECP jaar congres 2019
+  descr: "Fokker Terminal, The Hague, Netherlands, 14.Nov.2019"
+  website: https://ecp.nl/jaarcongres/kunst-expo-2019/
+
 - name: WeSA 2019
   descr: "Platform-L, Seoul, South Korea, 27-28.Sep.2019"
   website: https://www.wesa.kr/
