--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: TEC ART 2020
+  descr: "WORM, Rotterdam, Netherlands, 5-9.Feb.2019"
+  website: https://2020.tecart.nl/
+
 - name: Technologie-kunstexpo, ECP jaar congres 2019
   descr: "Fokker Terminal, The Hague, Netherlands, 14.Nov.2019"
   website: https://ecp.nl/jaarcongres/kunst-expo-2019/
