--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,5 +1,13 @@
+- name: RE:Search:Gallery RE:Discovery residency presentation
+  descr: "NP3, Groningen, Netherlands, 26-29.Aug.2020"
+  website: http://ilmin.org/kr/
+
+- name: workshop ZOOM-DIY-SOUND
+  descr: "Ilmin Museum of Art, Seoul, South Korea, 22-23.Aug.2020"
+  website: http://ilmin.org/kr/
+
 - name: TEC ART 2020
-  descr: "WORM, Rotterdam, Netherlands, 5-9.Feb.2019"
+  descr: "WORM, Rotterdam, Netherlands, 5-9.Feb.2020"
   website: https://2020.tecart.nl/
 
 - name: Technologie-kunstexpo, ECP jaar congres 2019
