--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,10 +1,14 @@
+- name: workshop Data Cleansing Day
+  descr: "NP3, Groningen, Netherlands, 03-04.Oct.2020"
+  website: https://off-technology.website/cloudisland/contents/workshop.html
+
 - name: RE:Search:Gallery RE:Discovery residency presentation
   descr: "NP3, Groningen, Netherlands, 26-29.Aug.2020"
-  website: http://ilmin.org/kr/
+  website: http://www.np3.nu/?p=2821
 
 - name: workshop ZOOM-DIY-SOUND
   descr: "Ilmin Museum of Art, Seoul, South Korea, 22-23.Aug.2020"
-  website: http://ilmin.org/kr/
+  website: https://off-technology.website/eWasteSoundGallery/
 
 - name: TEC ART 2020
   descr: "WORM, Rotterdam, Netherlands, 5-9.Feb.2020"
