--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: Unscene2020
+  descr: "Vurt, Seoul, South Korea, 22-23.Dec.2020"
+  website: https://www.unscene2020.com/
+
 - name: workshop Data Cleansing Day
   descr: "NP3, Groningen, Netherlands, 03-04.Oct.2020"
   website: https://off-technology.website/cloudisland/contents/workshop.html
