--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,3 +1,7 @@
+- name: Data Cleansing Workshop
+  descr: "SAPY(Seoul Artists’ Platform New&Young), Seoul, South Korea, 27-28.Feb.2021"
+  website: http://www.sapy.kr/ABOUT_US/?idx=5946970&bmode=view
+
 - name: Unscene2020
   descr: "Vurt, Seoul, South Korea, 22-23.Dec.2020"
   website: https://www.unscene2020.com/
